// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField when disabled renders 1`] = `
<div>
  <div
    class="padded small"
  >
    <div
      class="wrapper disabled"
    >
      <div
        class="inputWrapper"
      >
        <label
          class="label"
          for="123e4567-e89b-12d3-a456-426655440011"
        />
        <input
          class="input"
          disabled=""
          id="123e4567-e89b-12d3-a456-426655440011"
          type="text"
          value=""
        />
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`FormField when readonly renders 1`] = `
<div>
  <div
    class="padded small"
  >
    <div
      class="wrapper"
    >
      <div
        class="inputWrapper"
      >
        <label
          class="label"
          for="123e4567-e89b-12d3-a456-426655440009"
        />
        <input
          class="input"
          id="123e4567-e89b-12d3-a456-426655440009"
          readonly=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`FormField when small renders 1`] = `
<div>
  <div
    class="padded small"
  >
    <div
      class="wrapper small"
    >
      <div
        class="inputWrapper"
      >
        <label
          class="label"
          for="123e4567-e89b-12d3-a456-426655440007"
        />
        <input
          class="input"
          id="123e4567-e89b-12d3-a456-426655440007"
          type="text"
          value=""
        />
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`FormField with a placeholder renders 1`] = `
<div>
  <div
    class="padded small"
  >
    <div
      class="wrapper"
    >
      <div
        class="inputWrapper"
      >
        <label
          class="label"
          for="123e4567-e89b-12d3-a456-426655440003"
        >
          A placeholder
        </label>
        <input
          class="input"
          id="123e4567-e89b-12d3-a456-426655440003"
          type="text"
          value=""
        />
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`FormField with no props renders 1`] = `
<div>
  <div
    class="padded small"
  >
    <div
      class="wrapper"
    >
      <div
        class="inputWrapper"
      >
        <label
          class="label"
          for="123e4567-e89b-12d3-a456-426655440001"
        />
        <input
          class="input"
          id="123e4567-e89b-12d3-a456-426655440001"
          type="text"
          value=""
        />
      </div>
    </div>
    <div />
  </div>
</div>
`;
